添加多页面查询脚本并删除了某些不必要的io以提高运行速度

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,17 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "xml",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "args": [
+                "--xml",
+                "config/hololive.xml"
+            ],
+            "console": "integratedTerminal"
+        },
+        {
             "name": "Python: 当前文件",
             "type": "python",
             "request": "launch",
@@ -16,7 +27,10 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "args": ["--url", "https://www.youtube.com/channel/UCS9uQI-jC3DE0L4IpXyvr6w"],
+            "args": [
+                "--url",
+                "https://www.youtube.com/channel/UCS9uQI-jC3DE0L4IpXyvr6w"
+            ],
             "console": "integratedTerminal"
         }
     ]
